<resources>
    <string name="app_name">机器人API</string>
    <string name="send_message">发送消息</string>
    <string name="message_hint">请输入您的消息...</string>
    <string name="api_url_hint">API地址 (可选)</string>
    <string name="loading">加载中...</string>
    <string name="error_occurred">发生错误</string>
    <string name="network_error">网络错误，请检查网络连接</string>
    <string name="response">响应</string>
    <string name="clear">清除</string>
    <string name="settings">设置</string>
    <string name="default_api_url">https://api.example.com/robot</string>
</resources>